--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,21 +1,27 @@
-/* importing custom fonts */
+/* importing custom fonts 
 @font-face {
 	font-family: 'Aileron';
 	src: url('fonts/webfontkit/aileron-bold-webfont.woff2') format('woff2'),
 	     url('fonts/webfontkit/aileron-bold-webfont.woff') format('woff');
 }
+*/
 
 @import url(https://fonts.googleapis.com/css?family=Arvo:700);
 @import url(https://fonts.googleapis.com/css?family=Molengo);
 /*beginning of stylesheets*/
 
+* {
+	box-sizing: border-box;
+	margin-left: -2%;
+	margin-right: 0%;
+}
 html {
 	height: 100%;
 	width: 100%;
 }
 
 body {
-	background-color: rgb(0, 101, 255);
+  background: rgb(0, 101, 255);
 	color: #fff;
 	height: 100%;
 	width: 100%;
@@ -27,10 +33,12 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Molengo', sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: 'Aileron', 'Molengo', sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 36px;
 	font-weight: 900;
 	letter-spacing: 1px;
+	padding-left: 10%;
+	text-transform: uppercase;
 }
 
 p  {
@@ -41,24 +49,90 @@ p  {
 }
 
 header {
+	align-items: center;
+	-webkit-align-items: center;
+
+	background-image: url("/img/portfolio.png");
+	background-size: cover;
+	display: flex;
+	display: -webkit-flex;
+	flex-flow: row nowrap;
+	-webkit-flex-flow: row nowrap;
+	justify-content: space-between;
+	-webkit-justify-content: center;
+	height: 100%;
+}
+
+
+
+.left-element {
+  margin-left: 3%;
+}
+
+.middle-element {
+  margin-bottom: 30%;
+  margin-left: 25%;
+  z-index: -1;
+}
+.right-element {
+margin-bottom: 50%;
+}
+
+
+
+
+@media screen and (max-width: 773px) {
+
+  header {
+    align-items: center;
+    -webkit-align-items: center;
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: column nowrap;
+    overflow: hidden;
+    -webkit-flex-flow: column nowrap;
+  }
+  
+  .left-element {
+    margin-left: 90%;
+    margin-top: 20%;
+  }
+  .middle-element {
+    margin-right: 70%;
+  }
+
+  .right-element {
+    display: none;
+    visibility: hidden;
+  }
+  /*
+  .middle-element {
+  margin-bottom: 120%;
+  margin-left: 25%;
+  z-index: -1;
+  }
+
+  .right-element {
+    clear: both;
+    display: none;
+    visibility: hidden;
+  }
+  */
+}
+
+
+
+.content-section {
 	border: 2px solid cyan;
 	display: flex;
 	display: -webkit-flex;
 	flex-direction: column;
 	justify-content: center;
 	-webkit-justify-content: center;
-	-webkit-flex-direction: column;
 	height: 100%;
 }
 
-.content-section {
-	align-items: center;
-	-webkit-align-items: center;
-	border: 2px solid cyan;
-	display: flex;
-	display: -webkit-flex;
-	height: 100%;
-}
+
 
 #sky {
 	border-bottom: 2px solid red;
@@ -74,10 +148,117 @@ header {
 	width: 100%;
 }
 
+/*cloud icons*/
+
+.icon {
+  color: rgb(0, 101, 255);
+  position: relative;
+  display: inline-block;
+  width: 12rem;
+  height: 10rem;
+}
+
+.cloud {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  width: 3.6875rem;
+  height: 3.6875rem;
+  margin: -1.84375rem;
+  background: currentColor;
+  border-radius: 50%;
+  box-shadow: -2.1875rem 0.6875rem 0 -0.6875rem, 2.0625rem 0.9375rem 0 -0.9375rem, 0 0 0 0.375rem #fff, -2.1875rem 0.6875rem 0 -0.3125rem #fff, 2.0625rem 0.9375rem 0 -0.5625rem #fff;
+}
+
+.cloud:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -0.5rem;
+  display: block;
+  width: 4.5625rem;
+  height: 1rem;
+  background: currentColor;
+  box-shadow: 0 0.375rem #fff;
+}
+
+.cloud:nth-child(2) {
+  z-index: 0;
+  background: #fff;
+  box-shadow: -2.1875rem 0.6875rem 0 -0.6875rem #fff, 2.0625rem 0.9375rem 0 -0.9375rem #fff, 0 0 0 0.375rem #fff, -2.1875rem 0.6875rem 0 -0.3125rem #fff, 2.0625rem 0.9375rem 0 -0.5625rem #fff;
+  opacity: 0.3;
+  -webkit-transform: scale(0.5) translate(6rem, -3rem);
+  -ms-transform: scale(0.5) translate(6rem, -3rem);
+  transform: scale(0.5) translate(6rem, -3rem);
+  -webkit-animation: cloud 4s linear infinite;
+  animation: cloud 4s linear infinite;
+}
+
+.cloud:nth-child(2):after {
+  background: #fff;
+}
+
+/* cloud animation icons */
+
+@-webkit-keyframes cloud {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0.5) translate(-6rem, -3rem);
+    transform: scale(0.5) translate(-6rem, -3rem);
+  }
+}
+
+@keyframes cloud {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0.5) translate(-6rem, -3rem);
+    transform: scale(0.5) translate(-6rem, -3rem);
+  }
+}
+/*
+
 .flex-tier {
 	border: 2px solid red;
+	display: flex;
+	flex-direction: column;
 	width: 21%;
 }
+
+.tier-1-bg-1 {
+  background: linear-gradient(to top left, 
+  	rgba(0,0,0,0) 0%,
+  	rgba(0,0,0,0) 49%,
+  	rgba(255,255,255,1) 50%,
+  	rgba(255,255,255,0) 51%,
+  	rgba(0,0,0,0) 100%);
+  height: 60%;
+}
+
+.tier-2-bg-1 {
+  background: 
+       linear-gradient(to top right,
+          rgba(0,0,0,0) 0%,
+			  	rgba(0,0,0,0) 49%,
+			  	rgba(255,255,255,1) 50%,
+			  	rgba(255,255,255,0) 51%,
+			  	rgba(0,0,0,0) 100%);
+  height: 50%;
+}
+
+
 
 .flex-last {
   flex: auto;
@@ -97,3 +278,5 @@ header {
       rotate(27deg); 
   position: absolute;
 }
+
+*/
