--- a/app/css/main.css
+++ b/app/css/main.css
@@ -16,14 +16,15 @@
 	margin-right: 0%;
 }
 html {
+  background: 
+    url("/img/portfolio-2.png") no-repeat left top scroll rgb(0,101,255);
 	height: 100%;
 	width: 100%;
 }
 
 body {
-  background: rgb(0, 101, 255);
 	color: #fff;
-	height: 100%;
+  height: 100%;
 	width: 100%;
 }
 
@@ -33,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Aileron', 'Molengo', sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: 'Arvo', 'Molengo', sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 36px;
 	font-weight: 900;
 	letter-spacing: 1px;
@@ -43,7 +44,7 @@ h6 {
 
 p  {
 
-  font-family: 'Molengo', sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Arvo', sans-serif, "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 18px;
   font-weight: 900;
 }
@@ -51,9 +52,7 @@ p  {
 header {
 	align-items: center;
 	-webkit-align-items: center;
-
-	background-image: url("/img/portfolio.png");
-	background-size: cover;
+	
 	display: flex;
 	display: -webkit-flex;
 	flex-flow: row nowrap;
@@ -63,7 +62,20 @@ header {
 	height: 100%;
 }
 
+#name {
+  align-items: center;
+  webkit-align-items: center;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
 
+.name-content {
+  color: #fff;
+}
 
 .left-element {
   margin-left: 3%;
